--- a/public/css/app.css
+++ b/public/css/app.css
@@ -572,10 +572,18 @@ Ensure the default browser behavior of the `hidden` attribute.
   left: 0px;
 }.right-2 {
   right: 0.5rem;
+}.bottom-5 {
+  bottom: 1.25rem;
+}.-left-1\/2 {
+  left: -50%;
+}.left-1\/2 {
+  left: 50%;
 }.z-0 {
   z-index: 0;
 }.m-4 {
   margin: 1rem;
+}.m-0 {
+  margin: 0px;
 }.mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -597,6 +605,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
+}.my-20 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}.my-14 {
+  margin-top: 3.5rem;
+  margin-bottom: 3.5rem;
 }.ml-3 {
   margin-left: 0.75rem;
 }.-ml-px {
@@ -641,6 +655,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: 0.75rem;
 }.mt-1 {
   margin-top: 0.25rem;
+}.mt-6 {
+  margin-top: 1.5rem;
 }.block {
   display: block;
 }.inline-block {
@@ -669,8 +685,28 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 1.5rem;
 }.h-14 {
   height: 3.5rem;
+}.h-64 {
+  height: 16rem;
+}.h-10 {
+  height: 2.5rem;
+}.h-20 {
+  height: 5rem;
+}.h-32 {
+  height: 8rem;
+}.h-40 {
+  height: 10rem;
+}.max-h-fit {
+  max-height: -webkit-fit-content;
+  max-height: -moz-fit-content;
+  max-height: fit-content;
+}.max-h-\[10rem\] {
+  max-height: 10rem;
 }.min-h-screen {
   min-height: 100vh;
+}.min-h-\[188px\] {
+  min-height: 188px;
+}.min-h-full {
+  min-height: 100%;
 }.w-5 {
   width: 1.25rem;
 }.w-auto {
@@ -691,6 +727,22 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 10rem;
 }.w-96 {
   width: 24rem;
+}.w-10 {
+  width: 2.5rem;
+}.w-32 {
+  width: 8rem;
+}.w-20 {
+  width: 5rem;
+}.min-w-\[36rem\] {
+  min-width: 36rem;
+}.min-w-\[188\[\]\] {
+  min-width: 188[];
+}.min-w-\[188px\] {
+  min-width: 188px;
+}.min-w-\[30rem\] {
+  min-width: 30rem;
+}.min-w-\[16rem\] {
+  min-width: 16rem;
 }.max-w-6xl {
   max-width: 72rem;
 }.max-w-xl {
@@ -705,12 +757,40 @@ Ensure the default browser behavior of the `hidden` attribute.
   max-width: -webkit-fit-content;
   max-width: -moz-fit-content;
   max-width: fit-content;
+}.max-w-lg {
+  max-width: 32rem;
+}.max-w-sm {
+  max-width: 24rem;
+}.max-w-min {
+  max-width: -webkit-min-content;
+  max-width: -moz-min-content;
+  max-width: min-content;
+}.max-w-max {
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
+}.max-w-3xl {
+  max-width: 48rem;
+}.max-w-4xl {
+  max-width: 56rem;
+}.max-w-\[\] {
+  max-width: ;
+}.max-w-\[30rem\] {
+  max-width: 30rem;
+}.max-w-\[16rem\] {
+  max-width: 16rem;
 }.flex-1 {
   flex: 1 1 0%;
 }.flex-grow {
   flex-grow: 1;
 }.table-auto {
   table-layout: auto;
+}.translate-x-1\/2 {
+  --tw-translate-x: 50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.cursor-default {
   cursor: default;
 }.cursor-pointer {
@@ -723,6 +803,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   flex-direction: column;
 }.items-center {
   align-items: center;
+}.justify-end {
+  justify-content: flex-end;
 }.justify-center {
   justify-content: center;
 }.justify-between {
@@ -739,6 +821,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   gap: 2.5rem;
 }.gap-8 {
   gap: 2rem;
+}.gap-5 {
+  gap: 1.25rem;
 }.space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
@@ -774,6 +858,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-width: 1px;
 }.border-2 {
   border-width: 2px;
+}.border-4 {
+  border-width: 4px;
+}.border-\[3px\] {
+  border-width: 3px;
 }.border-t {
   border-top-width: 1px;
 }.border-r {
@@ -797,6 +885,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.border-green-400 {
   --tw-border-opacity: 1;
   border-color: rgb(74 222 128 / var(--tw-border-opacity));
+}.border-indigo-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(99 102 241 / var(--tw-border-opacity));
+}.border-indigo-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(79 70 229 / var(--tw-border-opacity));
 }.bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -909,6 +1003,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}.text-9xl {
+  font-size: 8rem;
+  line-height: 1;
+}.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
+}.text-8xl {
+  font-size: 6rem;
+  line-height: 1;
 }.font-medium {
   font-weight: 500;
 }.font-bold {
