--- a/public/css/app.css
+++ b/public/css/app.css
@@ -562,59 +562,68 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.sticky {
   position: -webkit-sticky;
   position: sticky;
+}.right-2 {
+  right: 0.5rem;
 }.top-0 {
   top: 0px;
 }.right-0 {
   right: 0px;
-}.left-5 {
-  left: 1.25rem;
-}.left-0 {
-  left: 0px;
-}.right-2 {
-  right: 0.5rem;
 }.bottom-5 {
   bottom: 1.25rem;
-}.-left-1\/2 {
-  left: -50%;
 }.left-1\/2 {
   left: 50%;
+}.left-0 {
+  left: 0px;
 }.z-0 {
   z-index: 0;
 }.m-4 {
   margin: 1rem;
 }.m-0 {
   margin: 0px;
-}.mx-2 {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
 }.mx-auto {
   margin-left: auto;
   margin-right: auto;
-}.my-1 {
-  margin-top: 0.25rem;
-  margin-bottom: 0.25rem;
-}.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-}.my-2 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
 }.my-5 {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
 }.mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
-}.my-20 {
-  margin-top: 5rem;
-  margin-bottom: 5rem;
+}.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}.my-1 {
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
 }.my-14 {
   margin-top: 3.5rem;
   margin-bottom: 3.5rem;
+}.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }.ml-3 {
   margin-left: 0.75rem;
 }.-ml-px {
   margin-left: -1px;
+}.ml-40 {
+  margin-left: 10rem;
+}.mb-2 {
+  margin-bottom: 0.5rem;
+}.mb-4 {
+  margin-bottom: 1rem;
+}.mt-1 {
+  margin-top: 0.25rem;
+}.mt-4 {
+  margin-top: 1rem;
+}.mr-3 {
+  margin-right: 0.75rem;
+}.mt-2 {
+  margin-top: 0.5rem;
+}.mr-2 {
+  margin-right: 0.5rem;
 }.mr-10 {
   margin-right: 2.5rem;
 }.ml-auto {
@@ -625,22 +634,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 2rem;
 }.ml-12 {
   margin-left: 3rem;
-}.mt-2 {
-  margin-top: 0.5rem;
-}.mt-4 {
-  margin-top: 1rem;
 }.-mt-px {
   margin-top: -1px;
 }.ml-1 {
   margin-left: 0.25rem;
-}.mr-2 {
-  margin-right: 0.5rem;
 }.ml-2 {
   margin-left: 0.5rem;
-}.mb-4 {
-  margin-bottom: 1rem;
-}.ml-40 {
-  margin-left: 10rem;
+}.mt-6 {
+  margin-top: 1.5rem;
 }.mt-28 {
   margin-top: 7rem;
 }.mb-1 {
@@ -649,18 +650,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 2.5rem;
 }.mt-auto {
   margin-top: auto;
-}.mb-2 {
-  margin-bottom: 0.5rem;
-}.mr-3 {
-  margin-right: 0.75rem;
-}.mt-1 {
-  margin-top: 0.25rem;
-}.mt-6 {
-  margin-top: 1.5rem;
 }.block {
   display: block;
-}.inline-block {
-  display: inline-block;
 }.inline {
   display: inline;
 }.flex {
@@ -681,26 +672,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 100%;
 }.h-8 {
   height: 2rem;
-}.h-6 {
-  height: 1.5rem;
-}.h-14 {
-  height: 3.5rem;
 }.h-64 {
   height: 16rem;
-}.h-10 {
-  height: 2.5rem;
-}.h-20 {
-  height: 5rem;
-}.h-32 {
-  height: 8rem;
 }.h-40 {
   height: 10rem;
-}.max-h-fit {
-  max-height: -webkit-fit-content;
-  max-height: -moz-fit-content;
-  max-height: fit-content;
-}.max-h-\[10rem\] {
-  max-height: 10rem;
+}.h-14 {
+  height: 3.5rem;
+}.h-6 {
+  height: 1.5rem;
 }.min-h-screen {
   min-height: 100vh;
 }.min-h-\[188px\] {
@@ -709,85 +688,50 @@ Ensure the default browser behavior of the `hidden` attribute.
   min-height: 100%;
 }.w-5 {
   width: 1.25rem;
-}.w-auto {
-  width: auto;
-}.w-8 {
-  width: 2rem;
-}.w-6 {
-  width: 1.5rem;
 }.w-full {
   width: 100%;
-}.w-14 {
-  width: 3.5rem;
-}.w-64 {
-  width: 16rem;
 }.w-48 {
   width: 12rem;
 }.w-40 {
   width: 10rem;
 }.w-96 {
   width: 24rem;
-}.w-10 {
-  width: 2.5rem;
-}.w-32 {
-  width: 8rem;
-}.w-20 {
-  width: 5rem;
-}.min-w-\[36rem\] {
-  min-width: 36rem;
-}.min-w-\[188\[\]\] {
-  min-width: 188[];
-}.min-w-\[188px\] {
-  min-width: 188px;
+}.w-auto {
+  width: auto;
+}.w-8 {
+  width: 2rem;
+}.w-14 {
+  width: 3.5rem;
+}.w-6 {
+  width: 1.5rem;
+}.w-64 {
+  width: 16rem;
 }.min-w-\[30rem\] {
   min-width: 30rem;
 }.min-w-\[16rem\] {
   min-width: 16rem;
-}.max-w-6xl {
-  max-width: 72rem;
-}.max-w-xl {
-  max-width: 36rem;
-}.max-w-7xl {
-  max-width: 80rem;
-}.max-w-2xl {
-  max-width: 42rem;
 }.max-w-md {
   max-width: 28rem;
 }.max-w-fit {
   max-width: -webkit-fit-content;
   max-width: -moz-fit-content;
   max-width: fit-content;
-}.max-w-lg {
-  max-width: 32rem;
-}.max-w-sm {
-  max-width: 24rem;
-}.max-w-min {
-  max-width: -webkit-min-content;
-  max-width: -moz-min-content;
-  max-width: min-content;
-}.max-w-max {
-  max-width: -webkit-max-content;
-  max-width: -moz-max-content;
-  max-width: max-content;
+}.max-w-6xl {
+  max-width: 72rem;
+}.max-w-xl {
+  max-width: 36rem;
+}.max-w-2xl {
+  max-width: 42rem;
 }.max-w-3xl {
   max-width: 48rem;
-}.max-w-4xl {
-  max-width: 56rem;
-}.max-w-\[\] {
-  max-width: ;
 }.max-w-\[30rem\] {
   max-width: 30rem;
-}.max-w-\[16rem\] {
-  max-width: 16rem;
+}.max-w-7xl {
+  max-width: 80rem;
 }.flex-1 {
   flex: 1 1 0%;
-}.flex-grow {
-  flex-grow: 1;
 }.table-auto {
   table-layout: auto;
-}.translate-x-1\/2 {
-  --tw-translate-x: 50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }.-translate-x-1\/2 {
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -795,34 +739,34 @@ Ensure the default browser behavior of the `hidden` attribute.
   cursor: default;
 }.cursor-pointer {
   cursor: pointer;
-}.grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
 }.grid-cols-\[auto_1fr\] {
   grid-template-columns: auto 1fr;
+}.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }.flex-col {
   flex-direction: column;
+}.place-content-center {
+  place-content: center;
 }.items-center {
   align-items: center;
-}.justify-end {
-  justify-content: flex-end;
 }.justify-center {
   justify-content: center;
 }.justify-between {
   justify-content: space-between;
 }.gap-4 {
   gap: 1rem;
-}.gap-3 {
-  gap: 0.75rem;
-}.gap-2 {
-  gap: 0.5rem;
 }.gap-6 {
   gap: 1.5rem;
-}.gap-10 {
-  gap: 2.5rem;
 }.gap-8 {
   gap: 2rem;
+}.gap-10 {
+  gap: 2.5rem;
 }.gap-5 {
   gap: 1.25rem;
+}.gap-2 {
+  gap: 0.5rem;
+}.gap-3 {
+  gap: 0.75rem;
 }.space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
@@ -840,14 +784,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   white-space: pre-line;
 }.rounded-md {
   border-radius: 0.375rem;
+}.rounded-sm {
+  border-radius: 0.125rem;
 }.rounded {
   border-radius: 0.25rem;
 }.rounded-full {
   border-radius: 9999px;
 }.rounded-3xl {
   border-radius: 1.5rem;
-}.rounded-sm {
-  border-radius: 0.125rem;
 }.rounded-l-md {
   border-top-left-radius: 0.375rem;
   border-bottom-left-radius: 0.375rem;
@@ -860,58 +804,49 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-width: 2px;
 }.border-4 {
   border-width: 4px;
-}.border-\[3px\] {
-  border-width: 3px;
+}.border-b-4 {
+  border-bottom-width: 4px;
 }.border-t {
   border-top-width: 1px;
 }.border-r {
   border-right-width: 1px;
 }.border-b {
   border-bottom-width: 1px;
-}.border-b-4 {
-  border-bottom-width: 4px;
 }.border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}.border-gray-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
-}.border-gray-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }.border-gray-500 {
   --tw-border-opacity: 1;
   border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }.border-green-400 {
   --tw-border-opacity: 1;
   border-color: rgb(74 222 128 / var(--tw-border-opacity));
+}.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
+}.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
 }.border-indigo-500 {
   --tw-border-opacity: 1;
   border-color: rgb(99 102 241 / var(--tw-border-opacity));
-}.border-indigo-600 {
+}.border-green-600 {
   --tw-border-opacity: 1;
-  border-color: rgb(79 70 229 / var(--tw-border-opacity));
+  border-color: rgb(22 163 74 / var(--tw-border-opacity));
 }.bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}.bg-gray-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}.bg-gray-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}.bg-gray-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}.bg-green-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
-}.bg-green-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }.bg-gray-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}.bg-gray-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}.bg-transparent {
+  background-color: transparent;
 }.bg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
@@ -927,22 +862,40 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.bg-red-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}.bg-gray-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}.bg-gray-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}.bg-green-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
+}.bg-green-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }.object-contain {
   -o-object-fit: contain;
      object-fit: contain;
 }.object-cover {
   -o-object-fit: cover;
      object-fit: cover;
-}.p-6 {
-  padding: 1.5rem;
-}.p-4 {
-  padding: 1rem;
-}.p-2 {
-  padding: 0.5rem;
 }.p-5 {
   padding: 1.25rem;
 }.p-3 {
   padding: 0.75rem;
+}.p-2 {
+  padding: 0.5rem;
+}.p-6 {
+  padding: 1.5rem;
+}.p-4 {
+  padding: 1rem;
 }.px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -952,34 +905,35 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-}.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
 }.py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
-}.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}.py-12 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
 }.py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }.py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
+}.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }.py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}.py-\[\.1rem\] {
+  padding-top: .1rem;
+  padding-bottom: .1rem;
+}.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }.pt-8 {
   padding-top: 2rem;
-}.pl-0 {
-  padding-left: 0px;
 }.pr-10 {
   padding-right: 2.5rem;
 }.text-left {
@@ -991,9 +945,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
-}.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
 }.text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -1003,38 +954,32 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}.text-9xl {
-  font-size: 8rem;
-  line-height: 1;
-}.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
+}.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }.text-8xl {
   font-size: 6rem;
   line-height: 1;
 }.font-medium {
   font-weight: 500;
-}.font-bold {
-  font-weight: 700;
 }.font-semibold {
   font-weight: 600;
+}.font-bold {
+  font-weight: 700;
 }.uppercase {
   text-transform: uppercase;
 }.italic {
   font-style: italic;
 }.leading-5 {
   line-height: 1.25rem;
-}.leading-7 {
-  line-height: 1.75rem;
-}.leading-tight {
-  line-height: 1.25;
 }.leading-8 {
   line-height: 2rem;
 }.leading-6 {
   line-height: 1.5rem;
+}.leading-7 {
+  line-height: 1.75rem;
+}.leading-tight {
+  line-height: 1.25;
 }.tracking-wider {
   letter-spacing: 0.05em;
 }.tracking-wide {
@@ -1045,33 +990,48 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
-}.text-gray-100 {
-  --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity));
-}.text-gray-200 {
-  --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
-}.text-gray-900 {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
 }.text-red-600 {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
+}.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}.text-gray-200 {
+  --tw-text-opacity: 1;
+  color: rgb(229 231 235 / var(--tw-text-opacity));
+}.text-gray-50 {
+  --tw-text-opacity: 1;
+  color: rgb(249 250 251 / var(--tw-text-opacity));
+}.text-green-400 {
+  --tw-text-opacity: 1;
+  color: rgb(74 222 128 / var(--tw-text-opacity));
+}.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}.text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}.text-indigo-700 {
+  --tw-text-opacity: 1;
+  color: rgb(67 56 202 / var(--tw-text-opacity));
+}.text-cyan-600 {
+  --tw-text-opacity: 1;
+  color: rgb(8 145 178 / var(--tw-text-opacity));
+}.text-indigo-600 {
+  --tw-text-opacity: 1;
+  color: rgb(79 70 229 / var(--tw-text-opacity));
+}.text-gray-100 {
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
+}.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }.text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
 }.text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
-}.text-green-600 {
-  --tw-text-opacity: 1;
-  color: rgb(22 163 74 / var(--tw-text-opacity));
 }.text-gray-800 {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
@@ -1081,24 +1041,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.text-green-500 {
   --tw-text-opacity: 1;
   color: rgb(34 197 94 / var(--tw-text-opacity));
-}.text-white {
+}.text-green-600 {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}.text-gray-50 {
-  --tw-text-opacity: 1;
-  color: rgb(249 250 251 / var(--tw-text-opacity));
-}.text-cyan-600 {
-  --tw-text-opacity: 1;
-  color: rgb(8 145 178 / var(--tw-text-opacity));
-}.text-indigo-600 {
-  --tw-text-opacity: 1;
-  color: rgb(79 70 229 / var(--tw-text-opacity));
-}.text-green-400 {
-  --tw-text-opacity: 1;
-  color: rgb(74 222 128 / var(--tw-text-opacity));
-}.text-indigo-700 {
-  --tw-text-opacity: 1;
-  color: rgb(67 56 202 / var(--tw-text-opacity));
+  color: rgb(22 163 74 / var(--tw-text-opacity));
 }.underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -1115,6 +1060,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}.outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
 }.ring-gray-300 {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(209 213 219 / var(--tw-ring-opacity));
@@ -1131,30 +1079,30 @@ Ensure the default browser behavior of the `hidden` attribute.
 }.odd\:bg-gray-50:nth-child(odd) {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}.hover\:bg-gray-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}.hover\:bg-green-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }.hover\:bg-gray-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}.hover\:bg-green-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}.hover\:bg-gray-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }.hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }.hover\:text-gray-400:hover {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
-}.hover\:text-indigo-600:hover {
-  --tw-text-opacity: 1;
-  color: rgb(79 70 229 / var(--tw-text-opacity));
 }.hover\:text-indigo-400:hover {
   --tw-text-opacity: 1;
   color: rgb(129 140 248 / var(--tw-text-opacity));
 }.hover\:text-gray-600:hover {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
+}.hover\:text-indigo-600:hover {
+  --tw-text-opacity: 1;
+  color: rgb(79 70 229 / var(--tw-text-opacity));
 }.hover\:opacity-100:hover {
   opacity: 1;
 }.focus\:z-10:focus {
