--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -6,7 +6,10 @@
     .heading {
         @apply text-gray-700 text-5xl font-bold tracking-wide my-10 text-center;
     }
-    .nav-signin-btn {
+    .nav-btn {
+        @apply text-gray-200 px-4 py-2 rounded bg-gray-600;
+    }
+    .nav-btn-active {
         @apply text-gray-800 px-4 py-2 rounded bg-gray-200 font-semibold;
     }
     .signin-form, .signup-form {
